[package]
name = "kadrs"
version = "0.1.0"
authors = ["tkmct <1220t.takamichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.9"

[dependencies.async-std]
version = "1.2.0"
features = ["attributes"]
