[package]
name = "kadrs"
version = "0.1.0"
authors = ["tkmct <1220t.takamichi@gmail.com>"]
edition = "2018"
default-run = "kadrs"

[dependencies]
ring = "0.16.9"
arrayvec = "0.5.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
clap = "2.33.0"

[dependencies.async-std]
version = "1.4.0"
features = ["attributes"]
