[package]
name = "kadrs"
version = "0.1.0"
authors = ["tkmct <1220t.takamichi@gmail.com>"]
edition = "2018"
default-run = "kadrs"

[dependencies]
ring = "0.16.15"
arrayvec = { version = "0.5.1", features = ["serde"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
clap = "2.33.2"

[dependencies.async-std]
version = "1.6.2"
features = ["attributes"]
